# rLVIS

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac
..Rcheck/: 00install.out
R/: Cfunctions.R  GridMetrics.R  RcppExports.R  Rcpp_processExtractMetrics.R  Rcpp_simulateFullWaveform.R  clipLevel1.R  clipLevel2.R  functions.R  plotStats.R  plotWaveform.R  readLevel1b.R  zzz.R
extdata/: lf_agb_1ha.tif  sf_agb_1ha.tif
inst/extdata/: LVIS_Mondah_level1b.SPLIT.8.h5  LVIS_Mondah_polygons.dbf  LVIS_Mondah_polygons.shp  LVIS_Mondah_polygons.shx  lvis_level1_clip.h5  lvis_level1_polygons.dbf  lvis_level1_polygons.prj  lvis_level1_polygons.shp  lvis_level1_polygons.shx  lvis_level2_clip.txt
man/: GridMetrics.Rd  L2Stats.Rd  clipLevel1.Rd  clipLevel1Geometry.Rd  clipLevel2.Rd  plotLevel2.Rd  plotStats.Rd  plotWaveform.Rd  processMetricsHDFlvis.Rd  readLevel1b.Rd  readLevel2.Rd  simulateFullWaveform.Rd
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  gediMetric.c  gediMetric.cpp  gediRat.cpp  gediRat.hpp  libLasProcess.c  libLasProcess.h  process.cpp  process.h  process.hpp
src/gedisimulator/: addNoiseHDF.c  clipLidar.c  extractTracks.csh  findGroundCentre.c  fitTXpulse.c  gediAscii2hdf.c  gediHandler.py  gediIO.c  gediNoise.c  gediRat.c  gediTest.c  install.bat  lasCover.c  lasPoints.c  lgw2hdf.c  lvisBullseye.c  makefile  mapLidar.c  noiseTest.c  setupGediRat  testSlope.c
src/gedisimulator/extractTracks/: chooseMetricPrints.c
src/libclidar/: gaussFit.c  libDEMhandle.c  libDEMhandle.h  libLasProcess.c  libLasProcess.h  libLasRead.c  libLasRead.h  libLidVoxel.c  libLidVoxel.h  libLidarHDF.c  libLidarHDF.h  libOctree.c  libTLSread.c  tiffRead.c  tiffWrite.c
src/tools/: tools.c  tools.h
tools/: deps.R  winlibs.R
